src/test/ui/asm/invalid-inline-asm.stderr
error: couldn't allocate input reg for constraint 'a'
  --> $DIR/invalid-inline-asm.rs:10:14
   |
LL |     unsafe { asm!("out %al, %dx" :: "a" (byte), "d" (port) :: "volatile"); }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

